# learning-based-RRT

./: README.md
2link/: CMakeLists.txt  make_n_run  p_list
2link/data/: cost_latest.txt
2link/data/sorted_latest/: data_1000.txt  data_1002.txt  data_1003.txt  data_1004.txt  data_1005.txt  data_1006.txt  data_1008.txt  data_1009.txt  data_1010.txt  data_1011.txt  data_1013.txt  data_1015.txt  data_1016.txt  data_1018.txt  data_1019.txt  data_1020.txt  data_1022.txt  data_1023.txt  data_1024.txt  data_1025.txt  data_1026.txt  data_1029.txt  data_103.txt  data_1032.txt  data_1034.txt  data_1035.txt  data_1039.txt  data_104.txt  data_1040.txt  data_1042.txt  data_1043.txt  data_1046.txt  data_1047.txt  data_105.txt  data_1052.txt  data_1053.txt  data_1056.txt  data_1057.txt  data_1058.txt  data_106.txt  (+1936 more)
2link/data/sq_torque_cost_np/: 2_cost.txt
2link/data/unsorted_latest/: control_1000.txt  control_1002.txt  control_1003.txt  control_1004.txt  control_1005.txt  control_1006.txt  control_1008.txt  control_1009.txt  control_1010.txt  control_1011.txt  control_1013.txt  control_1015.txt  control_1016.txt  control_1018.txt  control_1019.txt  control_1020.txt  control_1022.txt  control_1023.txt  control_1024.txt  control_1025.txt  control_1026.txt  control_1029.txt  (+5906 more)
2link/gen_eom/: 2link.urdf
2link/plots/: animate.m  plot_2link.m
2link/scripts/: 2link_data_sort  2link_gen_control_data_fulltraj  2link_gen_cost_data  gen_cost_thread
2link/src/: 2link.cpp  2link_gendata.cpp  2link_gendata_old.cpp  2link_gendata_penalty.cpp  2link_test.cpp  test_random.cpp
(+8299 files in other folders)
