CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( 2link CXX )
ADD_DEFINITIONS(-std=c++11)

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR} )
FIND_PACKAGE( ACADO REQUIRED )
INCLUDE_DIRECTORIES( . ${ACADO_INCLUDE_DIRS} )

ADD_EXECUTABLE( 2link src/2link_gendata_penalty.cpp )
TARGET_LINK_LIBRARIES( 2link ${ACADO_SHARED_LIBRARIES} )
SET_TARGET_PROPERTIES( 2link PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin )
